@@ -59,7 +59,7 @@
       </child>
 
       <child>
-	<widget class="GtkNotebook" id="notebook1">
+	<widget class="GtkNotebook" id="theme_notebook">
 	  <property name="border_width">5</property>
 	  <property name="visible">True</property>
 	  <property name="can_focus">True</property>
@@ -72,7 +72,7 @@
 	  <property name="enable_popup">False</property>
 
 	  <child>
-	    <widget class="GtkHBox" id="hbox9">
+	    <widget class="GtkHBox" id="meta_theme_hbox">
 	      <property name="border_width">8</property>
 	      <property name="visible">True</property>
 	      <property name="homogeneous">False</property>
@@ -282,7 +282,7 @@
 	  </child>
 
 	  <child>
-	    <widget class="GtkVBox" id="vbox1">
+	    <widget class="GtkVBox" id="control_theme_vbox">
 	      <property name="visible">True</property>
 	      <property name="homogeneous">False</property>
 	      <property name="spacing">8</property>
@@ -462,7 +462,7 @@
 	  </child>
 
 	  <child>
-	    <widget class="GtkVBox" id="vbox5">
+	    <widget class="GtkVBox" id="window_theme_vbox">
 	      <property name="border_width">8</property>
 	      <property name="visible">True</property>
 	      <property name="homogeneous">False</property>
@@ -628,7 +628,7 @@
 	  </child>
 
 	  <child>
-	    <widget class="GtkVBox" id="vbox9">
+	    <widget class="GtkVBox" id="icon_theme_vbox">
 	      <property name="border_width">8</property>
 	      <property name="visible">True</property>
 	      <property name="homogeneous">False</property>
