@@ -1,3 +1,7 @@
+Tue Nov  5 15:48:33 2002  Jonathan Blandford  <jrb@gnome.org>
+
+	* gnome-theme-info.c: Change the file format a bunch.
+
 2002-11-02  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.1.2
